[gd_scene load_steps=10 format=3 uid="uid://boutii2qfslqn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_h1uym"]
[ext_resource type="Script" path="res://scripts/camera_arm.gd" id="2_77pim"]
[ext_resource type="Script" path="res://scripts/inputs.gd" id="4_403v4"]
[ext_resource type="Texture2D" uid="uid://cjl62wt232xax" path="res://crosshair.png" id="4_klffw"]
[ext_resource type="SceneReplicationConfig" uid="uid://b2ro1t7sycbek" path="res://sync_input_conf.tres" id="5_httrv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ucx8u"]
albedo_color = Color(0.356863, 0.619608, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_28t71"]
material = SubResource( "StandardMaterial3D_ucx8u" )

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vbef3"]

[sub_resource type="BoxMesh" id="BoxMesh_ef7a8"]
size = Vector3(0.8, 0.2, 0.5)

[node name="Player" type="CharacterBody3D"]
floor_block_on_wall = false
script = ExtResource( "1_h1uym" )

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource( "CapsuleMesh_28t71" )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource( "CapsuleShape3D_vbef3" )

[node name="CameraArm" type="SpringArm3D" parent="."]
spring_length = 3.0
script = ExtResource( "2_77pim" )

[node name="Camera3D" type="Camera3D" parent="CameraArm"]
h_offset = 1.0
v_offset = 1.5

[node name="Position3D" type="Position3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -1)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.5)
mesh = SubResource( "BoxMesh_ef7a8" )

[node name="Crosshair" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource( "4_klffw" )
stretch_mode = 5

[node name="DebugUI" type="Control" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="DebugUI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Label1" type="Label" parent="DebugUI/VBox"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Label2" type="Label" parent="DebugUI/VBox"]
offset_top = 27.0
offset_right = 40.0
offset_bottom = 50.0

[node name="Label3" type="Label" parent="DebugUI/VBox"]
offset_top = 54.0
offset_right = 40.0
offset_bottom = 77.0

[node name="Label4" type="Label" parent="DebugUI/VBox"]
offset_top = 81.0
offset_right = 40.0
offset_bottom = 104.0

[node name="Label5" type="Label" parent="DebugUI/VBox"]
offset_top = 108.0
offset_right = 40.0
offset_bottom = 131.0

[node name="Label6" type="Label" parent="DebugUI/VBox"]
offset_top = 135.0
offset_right = 40.0
offset_bottom = 158.0

[node name="Inputs" type="Node" parent="."]
script = ExtResource( "4_403v4" )

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Inputs"]
root_path = NodePath("..")
resource = ExtResource( "5_httrv" )
